# tospoof

./: Cargo.toml  README.md  aliases.yaml  coverage.sh
.github/workflows/: rust.yml
src/: aliases.rs  args.rs  commands.rs  dig.rs  global.rs  main.rs
